--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ The presentation of the books is unusual in that the main text appears on the le
 This allows the reader to read the main text of the book in an HTML browser, uninterrupted by footnotes or other items.
 
 <p>
-Items <span style="background-color: #ffffCC" TITLE="emphasized or made prominent">highlighted</span> can be hovered over for a quick definition.  For best results of this function, please use desktop versions of Firefox or Chrome browsers. <i>Note: A known <a href="https://bugs.chromium.org/p/chromium/issues/detail?id=458642">issue</a> exists with Chrome browser in that it does not display † (cross symbol) or ‡ (double cross symbol) properly on some systems.</i>
+Items <span style="background-color: #ffffCC" TITLE="emphasized or made prominent">highlighted</span> can be hovered over for a quick definition.  For best results of this function, please use desktop versions of Firefox or Chrome browsers.
 
 <p>
 Many thanks to the friends who have proof-read the contents of this library to ensure the integrity of the works contained therein.
@@ -41,6 +41,11 @@ Many friends have asked for the ability to download all the books in this librar
        <td><center><b>Version</b></center></td>
        <td><center><b>Description</b></center></td>
        <td><center><b>Date</b></center></td>
+</tr>
+<tr>
+       <td>1.7.0</td>
+       <td>Addition of <i>Tablets of Bahá'u'lláh</i></td>
+       <td>September 2018</td>
 </tr>
 <tr>
        <td>1.6.0</td>
