--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<title>The Covenant Library</title>
 </head>
 
-<body BACKGROUND=BK1a.jpg>
+<body BACKGROUND=BK1a.JPG>
 <h1><center>The Covenant Library</center></h1>
 <center><i>"...immerse yourselves in this Ocean<br>in whose depths lay hidden<br>the pearls of wisdom and of utterance..."</i> <br><small>--Bahá'u'lláh</small></center>
 <h2><center>Table of Contents</center></h2>
 <h4><a href="about.html">About</a></h4>
 
-<h4><a href="https://www.google.com/search?num=100&newwindow=1&source=hp&ei=W9FNW9rKN8rCzwLDk4OQDQ&q=site%3Ad9263461.github.io">Search</a></h4>
+<h4><a href="search.html">Search</a></h4>
 
 <h3><a href="Baha'i/Baha/EW/Cover.html">Epistle to the Son of the Wolf</a></h3>
 
@@ -25,6 +25,8 @@
 <h3><a href="Baha'i/Baha/KI/Cover.html">The Kitáb-i-Íqán</a></h3>
 
 <h3><a href="Baha'i/Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></h3>
+
+<h3><a href="Baha'i/Baha/TOB/Cover.html">Tablets of Bahá'u'lláh</a></h3>
 
 <br>
 <br>
@@ -43,6 +45,6 @@
 <h3><font color="#bd1a03"><a href="download.html">Download Center</a></font></h3>
 
 <br><br>
-<small><p><i>The Covenant Library</i>, version 1.6.0.<p><p>
+<small><p><i>The Covenant Library</i>, version 1.7.0.<p><p>
 </body>
 </html>
