--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -1234,7 +1234,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>Tablets of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p168-176Ch11.html#p175">p. 175</a>
+	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p168-176Ch11.html#p175">p. 175</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">43</DIV></center><p></small></td>
 </tr>
