--- a/Baha'i/Baha/GL/Index.html
+++ b/Baha'i/Baha/GL/Index.html
@@ -291,7 +291,7 @@ Faithfulness, <a href= "../GL/p003-346.html#p91">91</a>, <a href= "../GL/p003-34
 Fanaticism, religious, <a href= "../GL/p003-346.html#p288">288</a><p>
 Fane, Frequented, <a href= "../GL/p003-346.html#p292">292</a><p>
 Fashioner, <a href= "../GL/p003-346.html#p14">14</a>, <a href= "../GL/p003-346.html#p141">141</a><p>
-Fast, prayer for the, <a href= "../GL/p003-346.html#p299">299</a>, <a href= "../GL/p003-346.html#p337">337</a><p>
+<a name="Fast"></a>Fast, prayer for the, <a href= "../GL/p003-346.html#para617">299</a>, <a href= "../GL/p003-346.html#para695">337</a><p>
 Fate, <a href= "../GL/p003-346.html#p133">133</a><p>
 Fear God, <a href= "../GL/p003-346.html#p38">38</a>, <a href= "../GL/p003-346.html#p98">98</a>, <a href= "../GL/p003-346.html#p104">104</a>, <a href= "../GL/p003-346.html#p126">126</a>, <a href= "../GL/p003-346.html#p128">128</a>, <a href= "../GL/p003-346.html#p272">272</a>, <a href= "../GL/p003-346.html#p275">275</a>, <a href= "../GL/p003-346.html#p277">277</a>, <a href= "../GL/p003-346.html#p291">291</a>, <a href= "../GL/p003-346.html#p314">314</a>, <a href= "../GL/p003-346.html#p323">323</a>, <a href= "../GL/p003-346.html#p346">346</a><p>
 Fellowship, <a href= "../GL/p003-346.html#p7">7</a>, <a href= "../GL/p003-346.html#p95">95</a>, <a href= "../GL/p003-346.html#p184">184</a>, <a href= "../GL/p003-346.html#p196">196</a>, <a href= "../GL/p003-346.html#p260">260</a>, <a href= "../GL/p003-346.html#p288">288</a>, <a href= "../GL/p003-346.html#p289">289</a>, <a href= "../GL/p003-346.html#p315">315</a>, <a href= "../GL/p003-346.html#p316">316</a>, <a href= "../GL/p003-346.html#p333">333</a>-334<p>
