--- a/Baha'i/Baha/KA/p019-088Aqdas.html
+++ b/Baha'i/Baha/KA/p019-088Aqdas.html
@@ -729,7 +729,7 @@
 		 </td>
 	 	 <td VALIGN=top>
 		 <hr><small>
-		 ["O kings of the earth!..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#CV">CV</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 p. <a href="../../Others/ROB/V2/p301-336Ch15.html#p304">304</a>-305; vol. 3 <a href="../../Others/ROB/V3/p147-173Ch08.html">chapter 8</a>
+		 ["O kings of the earth!..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#CV">CV</a>; <i>Prayers and Meditations</i>, <a href="../PM/p003-340.html#para129">p. 36</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 p. <a href="../../Others/ROB/V2/p301-336Ch15.html#p304">304</a>-305; vol. 3 <a href="../../Others/ROB/V3/p147-173Ch08.html">chapter 8</a>
 		 <p></small></td>
 		 <td>&nbsp;</td>
 	 </tr>
