--- a/Baha'i/Baha/KA/p089-102Supp.html
+++ b/Baha'i/Baha/KA/p089-102Supp.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p019-088Aqdas.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p103-140QA.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -34,12 +34,12 @@
 <table border="1" cellspacing="2" cellpadding="0" height="100" bgcolor="">
 <tr>
        <td width="80%"><center><h2>SOME TEXTS REVEALED<br>BY BAHÁ'U'LLÁH<br>SUPPLEMENTARY TO<br>THE KITÁB-I-AQDAS</h2></center><p>
-	   A number of Tablets revealed by Bahá'u'lláh after the Kitáb-i-Aqdas contain passages supplementary to the provisions of the Most Holy Book.  The most noteworthy of these have been published in <i>Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</i>.  Included in this section is an extract from the Tablet of Ishráqát.  The text of the three Obligatory Prayers referred to in Questions and Answers and the Prayer for the Dead mentioned in the Text are, likewise, reprinted here.<p>
+	   A number of Tablets revealed by Bahá'u'lláh after the Kitáb-i-Aqdas contain passages supplementary to the provisions of the Most Holy Book.  The most noteworthy of these have been published in <i>Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</i>.  Included in this section is an extract from the Tablet of Ishráqát.  The text of the three Obligatory Prayers referred to in Questions and Answers and the Prayer for the Dead mentioned in the Text are, likewise, reprinted here.<p> 
 	   </td>
        <td width="19%" VALIGN=top><small>
    	   <hr>
 	   <a href="../TOB/Cover.html"><i>Tablets of Bahá'u'lláh</i></a><p>
-   	   [tablets revealed after the Kitáb-i-Aqdas] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p103-117Ch07.html#p116">p. 116</a>
+   	   [tablets revealed after the Kitáb-i-Aqdas] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p103-117Ch07.html#p116">p. 116</a>	   
 	   </small></td>
        <td width="1%" VALIGN=top><small><center><a name="p89">89</a></center><p>
 	   </small></td>
@@ -63,26 +63,29 @@
    	   <hr>
    	   <i>Tablets of Bahá'u'lláh</i></a>, <a href="../TOB/p001-270TOB.html#para362">p. 128</a><p>
 	   <i>The Revelation of Bahá'u'lláh</i>, vol. 3 p. <a href="../../Others/ROB/V3/p308-321Ch14.html#p319">319</a>; vol. 4 p. <a href="../../Others/ROB/V4/p145-160Ch09.html#p145">145</a>
-	   </small></td>
+	   </small></td>	   
 	   <td VALIGN=top><small><center><a name="p91">91</a></center><p>
 	   </small>
-	   </td>
+	   </td>	
 </tr>
 <tr>
        <td>
 	   protest is vain.  Leave that soul to himself and turn unto the Lord, the Protector, the Self-Subsisting.  Be not the cause of grief, much less of discord and strife.  The hope is cherished that ye may obtain true education in the shelter of the tree of His tender mercies and act in accordance with that which God desireth.  Ye are all the leaves of one tree and the drops of one ocean.<p>
 	   <center>
 	   <i>(Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas)</i>
-	   <h3>LONG  OBLIGATORY  PRAYER</h3><p><b>TO BE RECITED ONCE IN<br>TWENTY-FOUR HOURS</b>
+	   <h3>LONG OBLIGATORY PRAYER</h3><p><b>TO BE RECITED ONCE IN<br>TWENTY-FOUR HOURS</b>
 	   </center><p>
-	   <blockquote><i>Whoso wisheth to recite this prayer, let him stand up and turn unto God, and, as he standeth in his place, let him gaze to the right and to the left, as if awaiting the mercy of his Lord, the Most Merciful, the Compassionate. Then let him say:</i></blockquote>
+	   <blockquote><i>Whoso wisheth to recite this prayer, let him stand up and turn unto God, and, as he standeth in his place, let him gaze to the right and to the left, as if awaiting the mercy of his Lord, the Most Merciful, the Compassionate. Then let him say:</i></blockquote>  
 	   O Thou Who art the Lord of all names and the Maker of the heavens!  I beseech Thee by them Who are the Daysprings of Thine invisible Essence, the Most Exalted, the All-Glorious, to make of my prayer a fire that will burn away the veils which have shut me out from Thy beauty, and a light that will lead me unto the ocean of Thy Presence.
 	   <blockquote><i>Let him then raise his hands in supplication toward God--blessed and exalted be He--and say:</i></blockquote>
-	   O Thou the Desire of the world and the Beloved of
+	   O Thou the Desire of the world and the Beloved of 
 	   </td>
        <td VALIGN=top><small>
    	   <hr>
-	   [obligatory prayers] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p30">p. 30</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Obligatoryprayer">vol. 3</a>, <a href="../../Others/ROB/V4/p463-485Index.html#Obligatoryprayer">vol. 4</a>
+	   [Long Obligatory Prayer]
+	   <a href="p258-296Index.html#ObligatoryPrayers">index</a>;
+	   <i>Prayers and Meditations</i>, <a href="../PM/p003-340.html#para1003">CLXXXIII</a>;
+	   <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p30">p. 30</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Obligatoryprayer">vol. 3</a>, <a href="../../Others/ROB/V4/p463-485Index.html#Obligatoryprayer">vol. 4</a>
 	   </small></td>
        <td VALIGN=top><small><center><a name="p92">92</a></center><p>
 	   </small></td>
@@ -93,7 +96,7 @@
 	   <blockquote><i>Let him then kneel, and bowing his forehead to the ground, let him say:</i></blockquote>
 	   Exalted art Thou above the description of anyone save Thyself, and the comprehension of aught else except Thee.<p>
 	   <blockquote><i>Let him then stand and say:</i></blockquote>
-	   Make my prayer, O my Lord, a fountain of living waters whereby I may live as long as Thy sovereignty endureth, and may make mention of Thee in every world of Thy worlds.<p>
+	   Make my prayer, O my Lord, a fountain of living waters whereby I may live as long as Thy sovereignty endureth, and may make mention of Thee in every world of Thy worlds.<p> 
 	   <blockquote><i>Let him again raise his hands in supplication, and say:</i></blockquote>
 	   O Thou in separation from Whom hearts and souls
 	   </td>
@@ -111,12 +114,12 @@
 </tr>
 <tr>
        <td>
-	   <blockquote><i>Let him then stand and raise his hands twice in supplication, and say:</i></blockquote>
-	   There is no God but Thee, the Almighty, the All-Bountiful.  There is no God but Thee, the Ordainer, both in the beginning and in the end.  O God, my God!  Thy forgiveness hath emboldened me, and Thy mercy hath strengthened me, and Thy call hath awakened me, and Thy grace hath raised me up and led me unto Thee.  Who, otherwise, am I that I should dare to stand at the gate of the city of Thy nearness, or set my face toward the lights that are shining from the heaven of Thy will?  Thou seest, O my Lord, this wretched creature knocking at the door of Thy grace, and this evanescent soul seeking the river of everlasting life from the hands of Thy bounty.  Thine is the command at all times, O Thou Who art the Lord of all names; and mine is resignation and willing submission to Thy will, O Creator of the heavens!
-	   <blockquote><i>Let him then raise his hands thrice, and say:</i></blockquote>
-	   Greater is God than every great one!
-	   <blockquote><i>Let him then kneel and, bowing his forehead to the ground, say:</i></blockquote>
-	   Too high art Thou for the praise of those who are nigh unto Thee to ascend unto the heaven of Thy nearness, or for the birds of the hearts of them who are devoted to Thee to attain to the door of Thy gate.  I testify that Thou hast been sanctified above all attributes and holy above all names.  No God is there but Thee, the Most Exalted, the All-Glorious.
+	   <blockquote><i>Let him then stand and raise his hands twice in supplication, and say:</i></blockquote> 
+	   There is no God but Thee, the Almighty, the All-Bountiful.  There is no God but Thee, the Ordainer, both in the beginning and in the end.  O God, my God!  Thy forgiveness hath emboldened me, and Thy mercy hath strengthened me, and Thy call hath awakened me, and Thy grace hath raised me up and led me unto Thee.  Who, otherwise, am I that I should dare to stand at the gate of the city of Thy nearness, or set my face toward the lights that are shining from the heaven of Thy will?  Thou seest, O my Lord, this wretched creature knocking at the door of Thy grace, and this evanescent soul seeking the river of everlasting life from the hands of Thy bounty.  Thine is the command at all times, O Thou Who art the Lord of all names; and mine is resignation and willing submission to Thy will, O Creator of the heavens! 
+	   <blockquote><i>Let him then raise his hands thrice, and say:</i></blockquote> 
+	   Greater is God than every great one! 
+	   <blockquote><i>Let him then kneel and, bowing his forehead to the ground, say:</i></blockquote> 
+	   Too high art Thou for the praise of those who are nigh unto Thee to ascend unto the heaven of Thy nearness, or for the birds of the hearts of them who are devoted to Thee to attain to the door of Thy gate.  I testify that Thou hast been sanctified above all attributes and holy above all names.  No God is there but Thee, the Most Exalted, the All-Glorious. 
 
 	   </td>
        <td></td>
@@ -149,13 +152,20 @@
 	   sent down unto us that which draweth us nigh unto Thee, and supplieth us with every good thing sent down by Thee in Thy Books and Thy Scriptures.  Protect us, we beseech Thee, O my Lord, from the hosts of idle fancies and vain imaginations.  Thou, in truth, art the Mighty, the All-Knowing.
 	   <blockquote><i>Let him then raise his head, and seat himself, and say:</i></blockquote>
 	   I testify, O my God, to that whereunto Thy chosen Ones have testified, and acknowledge that which the inmates of the all-highest Paradise and those who have circled round Thy mighty Throne have acknowledged.  The kingdoms of earth and heaven are Thine, O Lord of the worlds!
-	   <blockquote><i>(Prayers and Meditations by Bahá'u'lláh,</i> CLXXXIII)</blockquote>
+	   <blockquote><i>(Prayers and Meditations by Bahá'u'lláh,</i> <a href="../PM/p003-340.html#p317">CLXXXIII</a>)</blockquote>
 	   <center><h3>MEDIUM OBLIGATORY PRAYER</h3><p><b>TO BE RECITED DAILY,<br>IN THE MORNING, AT NOON,<br>AND IN THE EVENING</b><p></center>
 	   <blockquote><i>Whoso wisheth to pray, let him wash his hands, and while he washeth, let him say:</i></blockquote>
 	   Strengthen my hand, O my God, that it may take hold of Thy Book with such steadfastness that the hosts of the world shall have no power over it.  Guard it, then, from meddling with whatsoever doth not belong unto it.  Thou art, verily, the Almighty, the Most Powerful.
 	   And while washing his face, let him say:
 	   </td>
-       <td></td>
+       <td VALIGN=top><small>
+	   <hr>
+	   [Medium Obligatory Prayer]
+	   <a href="p258-296Index.html#ObligatoryPrayers">index</a>; 
+	   <i>Prayers and Meditations</i>, <a href="../PM/p003-340.html#para988">CLXXXII</a>;
+	   <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V3/p467-483Index.html#Obligatoryprayer">vol. 3</a>, <a href="../../Others/ROB/V4/p463-485Index.html#Obligatoryprayer">vol. 4</a>
+	   </small>
+	   </td>
        <td VALIGN=top><small><center><a name="p98">98</a></center><p></small></td>
 </tr>
 <tr>
@@ -177,19 +187,26 @@
 	   I bear witness to Thy unity and Thy oneness, and that Thou art God, and that there is none other God beside Thee.  Thou hast, verily, revealed Thy Cause, fulfilled Thy Covenant, and opened wide the door of Thy grace to all that dwell in heaven and on earth.  Blessing and peace, salutation and glory, rest upon Thy loved ones, whom the changes and chances of the world have not deterred from turning unto Thee, and who have given their all, in the hope of obtaining that which is with Thee.  Thou art, in truth, the Ever-Forgiving, the All-Bountiful.
 	   <blockquote>
 	   (<i>If anyone choose to recite instead of the long verse these words:</i>  "God testifieth that there is none other God but Him, the Help in Peril, the Self-Subsisting," <i>it would be sufficient.  And likewise, it would suffice were he, while seated, to choose to recite these words:</i>  "I bear witness to Thy unity and Thy oneness, and that Thou art God, and that there is none other God beside Thee.")<p>
-	   <i>(Prayers and Meditations by Bahá'u'lláh,</i> CLXXXII)
+	   <i>(Prayers and Meditations by Bahá'u'lláh,</i> <a href="../PM/p003-340.html#para988">CLXXXII</a>)
 	   </blockquote>
 	   <center><h3>SHORT  OBLIGATORY  PRAYER</h3><p><b>TO BE RECITED ONCE IN TWENTY-FOUR<br>HOURS, AT NOON</b></center><p>
-	   I bear witness, O my God, that Thou hast created me to know Thee and to worship Thee.  I testify, at this
+	   I bear witness, O my God, that Thou hast created me to know Thee and to worship Thee.  I testify, at this 
 	   </td>
-       <td></td>
+       <td VALIGN=top><small>
+	   <hr>
+	   [Short Obligatory Prayer] 
+	   <a href="p258-296Index.html#ObligatoryPrayers">index</a>;
+	   <i>Prayers and Meditations</i>, <a href="../PM/p003-340.html#para984">CLXXXI</a>;
+	   <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V3/p467-483Index.html#Obligatoryprayer">vol. 3</a>, <a href="../../Others/ROB/V4/p463-485Index.html#Obligatoryprayer">vol. 4</a>
+	   </small>
+	   </td>
        <td VALIGN=top><small><center><a name="p100">100</a></center><p></small></td>
 </tr>
 <tr>
        <td>
 	   moment, to my powerlessness and to Thy might, to my poverty and to Thy wealth.<p>
 	   There is none other God but Thee, the Help in Peril, the Self-Subsisting.
-	   <blockquote>(<i>Prayers and Meditations by Bahá'u'lláh,</i> CLXXXI)</blockquote>
+	   <blockquote>(<i>Prayers and Meditations by Bahá'u'lláh,</i> <a href="../PM/p003-340.html#para984">CLXXXI</a>)</blockquote>
 	   <a name="PrayerForTheDead"></a><center><h3>PRAYER  FOR  THE  DEAD</h3></center>
 	   O my God!  This is Thy servant and the son of Thy servant who hath believed in Thee and in Thy signs, and set his face towards Thee, wholly detached from all except Thee.  Thou art, verily, of those who show mercy the most merciful.<p>
 	   Deal with him, O Thou Who forgivest the sins of men and concealest their faults, as beseemeth the heaven of Thy bounty and the ocean of Thy grace.  Grant him admission within the precincts of Thy transcendent mercy that was before the foundation of earth and heaven.  There is no God but Thee, the Ever-Forgiving, the Most Generous.<p>
@@ -202,7 +219,11 @@
 						  </blockquote>
 	   </blockquote>
 	   </td>
-       <td></td>
+       <td VALIGN=top><small>
+	   <hr>
+	   [Prayer for the Dead] <a href="p258-296Index.html#PrayerfortheDead">Index</a>; <i>Prayers and Meditations by Bahá'u'lláh,</i> <a href="../PM/p003-340.html#para846">CLXVII</a>; ["In Islám it is customary..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p343-370Ch16.html#p350">p. 350</a>-351
+	   </small>
+	   </td>
        <td VALIGN=top><small><center><a name="p101">101</a></center><p></small></td>
 </tr>
 <tr>
@@ -212,7 +233,7 @@
 	   We all, verily, are patient in God.
 	   </blockquote>
 	   <i>(If the dead be a woman, let him say:  This is Thy handmaiden and the daughter of Thy handmaiden, etc. . .)</i><p>
-	   <i>(Prayers and Meditations by Bahá'u'lláh,</i> CLXVII)
+	   <i>(Prayers and Meditations by Bahá'u'lláh,</i> <a href="../PM/p003-340.html#para846">CLXVII</a>)
 	   </blockquote>
 	   </td>
        <td></td>
@@ -225,7 +246,7 @@
        <td>
 	   	   <FORM ACTION="p019-088Aqdas.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -233,12 +254,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p103-140QA.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
