--- a/Baha'i/Baha/KA/p258-296Index.html
+++ b/Baha'i/Baha/KA/p258-296Index.html
@@ -226,7 +226,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
 	   those in, injunction not to contend with, <a href= "p019-088Aqdas.html#para95">K95</a>, <a href= "p141-164Synopsis.html#p161">161</a><br>
 	   </blockquote>
 	   Auxiliary Board, <a href= "p165-251Notes.html#note183">n183</a><br>
-	   Ayyám-i-Há <i>see</i> <a href="p258-296Index.html#Intercalary Days">Intercalary Days</a><br>
+	   Ayyám-i-Há <i>see</i> <a href="p258-296Index.html#IntercalaryDays">Intercalary Days</a><br>
 	   <a name="Azalís"></a>Azalís, <a href= "p019-088Aqdas.html#para164">K164</a>, <a href= "p165-251Notes.html#note177">n177</a>, <a href= "p165-251Notes.html#note190">n190</a><br>
 	   <br>
 	   B and E (the letters), <a href= "p019-088Aqdas.html#para177">K177</a>, <a href= "p089-102Supp.html#p96">96</a>, <a href= "p165-251Notes.html#note188">n188</a><br>
@@ -621,7 +621,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
 	   <blockquote>
 	   Based on solar year, <a href= "p165-251Notes.html#note27">n27</a>, <a href= "p165-251Notes.html#note138">n138</a>, <a href= "p165-251Notes.html#note147">n147</a><br>
 	   day, period of, <a href= "p165-251Notes.html#note26">n26</a><br>
-	   Intercalary Days (Ayyám-i-Há), <a href= "p019-088Aqdas.html#para16">K16</a>, <a href= "p165-251Notes.html#note27">n27</a>, <a href= "p165-251Notes.html#note147">n147</a>, <i>see also</i> <a href="p258-296Index.html#Intercalary Days">Intercalary Days</a><br>
+	   Intercalary Days (Ayyám-i-Há), <a href= "p019-088Aqdas.html#para16">K16</a>, <a href= "p165-251Notes.html#note27">n27</a>, <a href= "p165-251Notes.html#note147">n147</a>, <i>see also</i> <a href="p258-296Index.html#IntercalaryDays">Intercalary Days</a><br>
 	   months<br>
 	   <blockquote>
 	   names, <a href= "p019-088Aqdas.html#para127">K127</a>, <a href= "p165-251Notes.html#note139">n139</a>, <a href= "p165-251Notes.html#note148">n148</a><br>
@@ -802,7 +802,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
 	   David (King), <a href= "p165-251Notes.html#note114">n114</a><br>
 	   Dawn, prayer at, <a href= "p019-088Aqdas.html#para33">K33</a>, <a href= "p019-088Aqdas.html#para115">K115</a>, <a href= "p103-140QA.html#qa15">Q15</a>, <a href= "p165-251Notes.html#note5">n5</a>, <a href= "p165-251Notes.html#note142">n142</a><br>
 	   <i>Dawn-Breakers, The</i>, <a href= "p165-251Notes.html#note171">n171</a>-<a href= "p165-251Notes.html#note172">n172</a>, <a href= "p165-251Notes.html#note178">n178</a>-<a href= "p165-251Notes.html#note179">n179</a><br>
-	   Day(s) <i>see</i> <a href="p258-296Index.html#Calendar,Bahá'í">Calendar, Bahá'í</a>; <a href="p258-296Index.html#HolyDays">Holy Days</a>; <a href="p258-296Index.html#Intercalary Days">Intercalary Days</a>; <a href="p258-296Index.html#NineteenDayFeast">Nineteen Day Feast</a>.<br>
+	   Day(s) <i>see</i> <a href="p258-296Index.html#Calendar,Bahá'í">Calendar, Bahá'í</a>; <a href="p258-296Index.html#HolyDays">Holy Days</a>; <a href="p258-296Index.html#IntercalaryDays">Intercalary Days</a>; <a href="p258-296Index.html#NineteenDayFeast">Nineteen Day Feast</a>.<br>
 	   <blockquote>
 	   of the Covenant, <a href= "p165-251Notes.html#note139">n139</a><br>
 	   of God, <a href= "p019-088Aqdas.html#para80">K80</a>, <a href= "p019-088Aqdas.html#para88">K88</a>, <a href= "p019-088Aqdas.html#para138">K138</a><br>
@@ -1494,7 +1494,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
 	   administrative, <a href= "p001-011Intro.html#p3">3</a>, <a href= "p012-018Desc.html#p12">12</a>-13, <i>see also</i> <a href="p258-296Index.html#Guardianship">Guardianship</a> <a href="p258-296Index.html#HandsoftheCause">Hands of the Cause</a>; <a href="p258-296Index.html#House(s)ofJustice">House(s) of Justice</a><br>
 	   elections for <i>see</i> <a href="p258-296Index.html#Elections,Bahá'í">Elections, Bahá'í</a><br>
 	   </blockquote>
-	   <a name="Intercalary Days"></a>Intercalary days (Ayyám-i-Há), <a href= "p012-018Desc.html#p14">14</a>, <a href= "p019-088Aqdas.html#para16">K16</a>, <a href= "p141-164Synopsis.html#p148">148</a>, <a href= "p165-251Notes.html#note29">n29</a>, <a href= "p165-251Notes.html#note147">n147</a>, <i>see also</i> <a href="p258-296Index.html#Calendar,Bahá'í">Calendar, Bahá'í</a><br>
+	   <a name="IntercalaryDays"></a>Intercalary days (Ayyám-i-Há), <a href= "p012-018Desc.html#p14">14</a>, <a href= "p019-088Aqdas.html#para16">K16</a>, <a href= "p141-164Synopsis.html#p148">148</a>, <a href= "p165-251Notes.html#note29">n29</a>, <a href= "p165-251Notes.html#note147">n147</a>, <i>see also</i> <a href="p258-296Index.html#Calendar,Bahá'í">Calendar, Bahá'í</a><br>
 	   <blockquote>position in calendar, <a href= "p019-088Aqdas.html#para16">K16</a>, <a href= "p165-251Notes.html#note25">n25</a>, <a href= "p165-251Notes.html#note27">n27</a></blockquote>
 	   International Teaching Center, <a href= "p165-251Notes.html#note183">n183</a><br>
 	   <a name="InterpretationofSacredText"></a>Interpretation of Sacred Text, <a href= "p019-088Aqdas.html#para105">K105</a>, <a href= "p019-088Aqdas.html#para167">K167</a>-<a href= "p019-088Aqdas.html#para168">K168</a>, <a href= "p165-251Notes.html#note180">n180</a>, <i>see also</i> <a href="p258-296Index.html#'Abdu'l-Bahá">'Abdu'l-Bahá</a>; <a href="p258-296Index.html#ShoghiEffendi">Shoghi Effendi</a>; <a href="p258-296Index.html#Guardianship">Guardianship</a><br>
@@ -2020,7 +2020,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
 	   Násiri'd-Dín Sháh, <a href= "p165-251Notes.html#note177">n177</a><br>
 	   National Spiritual Assembly <i>see</i> <a href="p258-296Index.html#HouseofJustice,National">House of Justice, National (Secondary)</a><br>
 	   Natural events, fearful, <a href= "p019-088Aqdas.html#para11">K11</a>, <a href= "p165-251Notes.html#note18">n18</a><br>
-	   Naw-Rúz, <i>see also</i> <a href="p258-296Index.html#Calendar,Bahá'í">Calendar, Bahá'í</a>; <a href="p258-296Index.html#HolyDays">Holy Days</a><br>
+	   <a name="Naw-Rúz"></a>Naw-Rúz, <i>see also</i> <a href="p258-296Index.html#Calendar,Bahá'í">Calendar, Bahá'í</a>; <a href="p258-296Index.html#HolyDays">Holy Days</a><br>
 	   <blockquote>method of determining date, <a href= "p103-140QA.html#qa35">Q35</a>, <a href= "p165-251Notes.html#note26">n26</a></blockquote>
 	   <a name="Negligence"></a>Negligence, <a href= "p019-088Aqdas.html#para40">K40</a>, <a href= "p019-088Aqdas.html#para134">K134</a>, <a href= "p019-088Aqdas.html#para171">K171</a><br>
 	   Neighbor, behaviour towards, <a href= "p001-011Intro.html#p2">2</a>, <a href= "p141-164Synopsis.html#p159">159</a>, <a href= "p141-164Synopsis.html#p161">161</a>, <a href= "p165-251Notes.html#note163">n163</a><br>
