--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -2987,6 +2987,8 @@
 	1. Mecca.<p>
 	2. Qur'án 3:91.<p>
 	3. Muhammad.
+	<hr>
+		[Fast] <a href="../KA/p258-296Index.html#Fasting"><i>The Kitáb-i-Aqdas</i></a>; <i>The Kitáb-i-Íqán</i>, <a href="../KI/p001-094.html#para39">p. 39</a>-40; <a href="../PM/Index.html#Fast"><i>Prayers and Meditations</i></a>; <a href="../GL/Index.html#Fast"><i>Gleanings From The Writings Of Bahá'u'lláh</i></a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p397-421Ch19.html#p397">p. 397</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Fasting">vol. 3</a>, vol. 4 <a href="../../Others/ROB/V4/p001-010Ch01.html#p9">p. 9</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">109</DIV></center><p></small></td>
 </tr>
