--- a/Baha'i/Others/ROB/V1/p105-152Ch09.html
+++ b/Baha'i/Others/ROB/V1/p105-152Ch09.html
@@ -94,6 +94,9 @@
 	   * Bahá'u'lláh.<p>
 	   † The Trumpet-blast mentioned in the <i>Qur'án</i> signifies the proclamation of the Message of Bahá'u'lláh.<p>
 	   ‡ Literally, Paradise. It is also significant to note here that Bahá'u'lláh declared His Mission in 1863 in a garden outside Baghdád which was designated the 'Garden of Ridván'.<p>
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -235,7 +238,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p115">115</a></center><p>
 	   <hr>
-	   2. Bahá'u'lláh, <i>Prayers and Meditations by Bahá'u'lláh</i>, no. 184.
+	   2. Bahá'u'lláh, <i>Prayers and Meditations by Bahá'u'lláh</i>, <a href="../../../Baha/PM/p003-340.html#para1041">no. 184</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -253,7 +256,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p116">116</a></center><p>
 	   <hr>
-	   3. Bahá'u'lláh, <i>Prayers and Meditations by Bahá'u'lláh</i>, no. 88.
+	   3. Bahá'u'lláh, <i>Prayers and Meditations by Bahá'u'lláh</i>, <a href="../../../Baha/PM/p003-340.html#p149">no. 88</a>.
 	   </small></td>
 </tr>
 <tr>
