--- a/Baha'i/Others/ROB/V1/p198-209Ch11.html
+++ b/Baha'i/Others/ROB/V1/p198-209Ch11.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p153-197Ch10.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p210-220Ch12.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -147,7 +147,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p206">206</a></center><p>
-	   * The first four paragraphs of this Tablet (no. 180, <i>Prayers and Meditation by Bahá'u'lláh</i>) are extracted from a Tablet of Bahá'u'lláh to one of His followers, Áqá Bábá; paragraphs five and six come from another Tablet revealed for an individual Bahá'í whom I have not been able to identify, and the last paragraph from a Tablet of Bahá'u'lláh to Khadíjih-Bagum, the wife of the Báb.<p>
+	   * The first four paragraphs of this Tablet (<a href="../../../Baha/PM/p003-340.html#para975">no. 180</a>, <i>Prayers and Meditation by Bahá'u'lláh</i>) are extracted from a Tablet of Bahá'u'lláh to one of His followers, Áqá Bábá; paragraphs five and six come from another Tablet revealed for an individual Bahá'í whom I have not been able to identify, and the last paragraph from a Tablet of Bahá'u'lláh to Khadíjih-Bagum, the wife of the Báb.<p>
 	   † The Shrine of Bahá'u'lláh at Bahjí.
 	   </small></td>
 </tr>
@@ -225,7 +225,7 @@
        <td>
 	   	   <FORM ACTION="p153-197Ch10.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -233,12 +233,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p210-220Ch12.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
