--- a/Baha'i/Others/ROB/V1/p257-282Ch16.html
+++ b/Baha'i/Others/ROB/V1/p257-282Ch16.html
@@ -15,7 +15,7 @@
        <td>
 	   	   <FORM ACTION="p246-256Ch15.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -23,12 +23,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p283-293Ch17.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -43,7 +43,11 @@
 	   But in the case of Bahá'u'lláh, His glory was so overwhelming that everyone felt inferior in His presence. Even His enemies became humble when they came in contact with His person. While He was chained and fettered in the Síyáh-Chál of Tihrán, the officials in that dungeon became subdued by His greatness. And when He was released from that prison and conducted to the Prime Minister's office in Tihrán, it was not the
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p257">257</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p257">257</a></center><p>
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -67,6 +71,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p259">259</a></center><p>
 	   * Thirty-one days after Naw-Rúz (21 March) normally falls on 21 April. Occasionally, as in the year 1863, when the vernal equinox takes place after sunset, Naw-Rúz is celebrated on 22 March.
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a><p>
+   	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
 </tr>
 <tr>
@@ -179,7 +187,7 @@
        <td VALIGN=top><small><center><a name="p267">267</a></center><p>
 	   * See p. <a href="p071-083Ch06.html#p81">81</a>, note.<p>
 	   <hr>
-	   6. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 156 (Brit.}, <a href="../../../Baha/KI/p095-258.html#para172">p. 245</a> (U.S.).
+	   6. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 156 (Brit.}, <a href="../../../Baha/KI/p095-258.html#para172">p. 245</a> (U.S.).	   
 	   </small></td>
 </tr>
 <tr>
@@ -252,7 +260,11 @@
 	   In a number of Tablets, most of which have not yet been translated, Bahá'u'lláh has extolled the sacredness and glory of the days of Ridván. One of these, revealed a few years after His Declaration, has been rendered into English by Shoghi Effendi. The following are some excerpts:<p>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p273">273</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p273">273</a></center><p>
+	   <hr>
+	   <hr>
+   	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -327,7 +339,10 @@
 	   * It is not clear, however, whether these were part of the declaration of His station, as 'Him Whom God shall make manifest', or not.<p>
 	   † By this was intended any kind of arms or weapon.<p>
 	   <hr>
-	   11. Bahá'u'lláh, <i>Prayers and Meditations by Bahá'u'lláh</i>, no. 178.
+	   11. Bahá'u'lláh, <i>Prayers and Meditations by Bahá'u'lláh</i>, <a href="../../../Baha/PM/p003-340.html#para946">no. 178</a>.
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -357,7 +372,8 @@
 	   13. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#CLXVI">clxvi</a>.<p>
 	   <hr>
 	   ["Whoso layeth claim..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para37">&para;37</a><p>
-	   [next manifestation] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../3/p133-146Ch07.html#p142">p. 142</a>
+	   [Next manifestation] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../3/p133-146Ch07.html#p142">p. 142</a><p>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -372,7 +388,11 @@
 	   </blockquote>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p281">281</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p281">281</a></center><p>
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -391,7 +411,7 @@
        <td>
 	   	   <FORM ACTION="p246-256Ch15.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -399,12 +419,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p283-293Ch17.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
