--- a/Baha'i/Others/ROB/V1/p337-340Biblio.html
+++ b/Baha'i/Others/ROB/V1/p337-340Biblio.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p332-336Apndx_IV.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p341-350Refs.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -58,7 +58,7 @@
 	   <blockquote>
 	   assistance of some English friends. First published in England 1932. London: Bahá'í Publishing Trust, 1949. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1954.<p>
 	   <i><a href="../../../Baha/KI/Cover.html">The Kitáb-i-Íqán</a></i>. <i>The Book of Certitude</i>. Trans. by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, 1931; 2nd edn. 1950. London: Bahá'í Publishing Trust, 2nd edn. 1961.<p>
-	   <i>Prayers and Meditations by Bahá'u'lláh</i>. Compiled and trans. by Shoghi Effendi. New York: Bahá'í Publishing Committee, 1938. Reprinted Wilmette, Illinois: Bahá'í Publishing Trust. London: Bahá'í Publishing Trust, 1957.<p>
+	   <i><a href="../../../Baha/PM/Cover.html">Prayers and Meditations by Bahá'u'lláh</a></i>. Compiled and trans. by Shoghi Effendi. New York: Bahá'í Publishing Committee, 1938. Reprinted Wilmette, Illinois: Bahá'í Publishing Trust. London: Bahá'í Publishing Trust, 1957.<p>
 	   <i>The Proclamation of Bahá'u'lláh</i> to the kings and leaders of the world. Haifa: Bahá'í World Centre, 1967.<p>
 	   <i><a href="../../../Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></i>. Translated by Ali-Kuli Khán (Nabílu'd-Dawlih), assisted by Marzieh Gail. Wilmette, Illinois: Bahá'í Publishing Trust, 1945; rev. edn. 1952.<p>
 	   </blockquote>
@@ -109,7 +109,7 @@
        <td>
 	   	   <FORM ACTION="p332-336Apndx_IV.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -117,12 +117,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p341-350Refs.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
