--- a/Baha'i/Others/ROB/V1/p018-044Ch03.html
+++ b/Baha'i/Others/ROB/V1/p018-044Ch03.html
@@ -196,7 +196,7 @@
        <td VALIGN=top><small><center><a name="p30">30</a></center><p>
 	   * See p. <a href="p198-209Ch11.html#p206">206</a><p>
 	   <hr>
-	   4. Bahá'u'lláh, 'Tablet of Visitation' and '<a href="../../../Baha/KA/p089-102Supp.html#p92">Long Obligatory Prayer</a>', included in most Bahá'í Prayer Books.
+	   4. Bahá'u'lláh, '<a href="../../../Baha/PM/p003-340.html#para975">Tablet of Visitation</a>' and '<a href="../../../Baha/PM/p003-340.html#para1003">Long Obligatory Prayer</a>', included in most Bahá'í Prayer Books.
 	   </small></td>
 </tr>
 <tr>
