--- a/Baha'i/Others/ROB/V1/p283-293Ch17.html
+++ b/Baha'i/Others/ROB/V1/p283-293Ch17.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p257-282Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p294-314Ch18.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -42,6 +42,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p283">283</a></center><p>
 	   * The Muslim call to prayer.
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -55,6 +58,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p284">284</a></center><p>
 	   * The origin of the word is Arabic. It is a litter consisting of a pair of panniers in which two individuals can ride, and is carried by a beast of burden, in this case a mule.
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -179,7 +185,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p293">293</a></center><p>
 	   <hr>
-	   12. Shoghi Effendi, <i>God Passes By</i>, pp. 157-8.<p>
+	   12. Shoghi Effendi, <i>God Passes By</i>, pp. 157-8.
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 </table>
@@ -189,7 +198,7 @@
        <td>
 	   	   <FORM ACTION="p257-282Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -197,12 +206,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p294-314Ch18.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
